# er_vision_pipeline

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md
src/: CMakeLists.txt  README.md  application_state.cpp  application_state.h  er-logging.cpp  er-logging.h  er-pcl.cpp  er-pipeline.cpp  er-pipeline.h  field_map.cpp  field_map.h  geo_tools.cpp  helpers_ui.cpp  helpers_ui.h  process_3d.cpp  process_3d.h  visualizer.cpp  visualizer.h  visualizer_ui.cpp  visualizer_ui.h  window_control.h
src/algebra/: plane.cpp  plane.h
src/filters/: ground_filter.cpp  ground_filter.h  plant_definition.h  plant_extraction.cpp  plant_extraction.h  plant_segmentation.cpp  plant_segmentation.h  plant_separation.cpp  plant_separation.h
src/libs/: imgui_impl_glfw_gl3.cpp
src/util/: er-logging.cpp  er-logging.h
